--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:UGRTUwoWCNJvOpUruqBrVCLCKRBOrWbT@postgres-thhk.railway.internal:5432/railway
+DATABASE_URL=postgres://postgres.zwceeheddmliblhdeqkf:pDYkMn9LGWljbT6m@aws-0-us-east-1.pooler.supabase.com:6543/postgres?sslmode=require&supa=base-pooler.x
